<resources>
    <string name="app_name">InfSocial</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="places_api_key"> </string>
    <string name="google_maps_key"> </string>
    <string name="apresenta_o_da_logo">Apresentação da Logo</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="first_name">Nome</string>
    <string name="last_name">Sobrenome</string>
    <string name="login_title">Acessar</string>
    <string name="create_act">Criar Conta</string>
    <string name="cadastrar_nova_mesa">Cadastrar Nova Mesa:</string>
    <string name="msg_token_fmt">Sucesso</string>
    <string name="insira_quanto_voc_pretende_gastar_hoje">Gostaria de controlar seus gastos?</string>
    <string name="compartilhe_sua_localiza_o_com_amigos">Compartilhe sua localização com amigos!</string>
    <string name="acompanhe_as_mesas_criadas">Crie ou entre nas mesas já criadas!</string>
    <string name="menu">Menu</string>
    <string name="check_in">Check-in</string>
    <string name="insira_aqui_seu_or_amento">novo orçamento</string>
    <string name="mesas">Mesas</string>
    <string name="title_activity_mapa_de_locais">Map</string>
    <string name="or_amento">Orçamento</string>
    <string name="rs">R$</string>
    <string name="banner_ad_unit_id">ca-app-pub-9349248892305112/2664526596</string>
</resources>
