<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeMenuFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/txtVwOrcamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/insira_quanto_voc_pretende_gastar_hoje"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.21"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnMesas" />

        <TextView
            android:id="@+id/txtVwShareLocation"
            android:layout_width="301dp"
            android:layout_height="26dp"
            android:layout_marginTop="55dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/compartilhe_sua_localiza_o_com_amigos"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.327"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtVwMenuTxt" />

        <TextView
            android:id="@+id/txtVwAcompanheMesas"
            android:layout_width="254dp"
            android:layout_height="25dp"
            android:layout_marginTop="55dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/acompanhe_as_mesas_criadas"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.189"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnMapsMenu" />

        <TextView
            android:id="@+id/txtVwMenuTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/menu"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnMapsMenu"
            style="@style/CKButton"
            android:layout_width="300dp"
            android:layout_height="41dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_buttons"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/check_in"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtVwShareLocation" />

        <Button
            android:id="@+id/btnMesas"
            style="@style/CKButton"
            android:layout_width="300dp"
            android:layout_height="41dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_buttons"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/mesas"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtVwAcompanheMesas" />

        <Button
            android:id="@+id/btnTelaOrcamento"
            style="@style/CKButton"
            android:layout_width="300dp"
            android:layout_height="41dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_buttons"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/or_amento"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtVwOrcamento" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/ad_view_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            ads:adSize="LARGE_BANNER"
            ads:adUnitId="ca-app-pub-9349248892305112/4861462449"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnTelaOrcamento" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>