<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.CreateAccountActivity">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="161dp"
        android:layout_height="165dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_teste_3" />

    <TextView
        android:id="@+id/txtVw3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="Não compartilhe sua conta com outras pessoas!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/llLoginPanel"
        android:layout_width="365dp"
        android:layout_height="429dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/shape_login_panel"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingTop="70dp"
        android:paddingRight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"><![CDATA[> ]]>


        <EditText
            android:id="@+id/etNomeMesa"
            style="@style/viewCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:drawableRight="@drawable/ic_person_black_24dp"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-light"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="232dp" />

        <EditText
            android:id="@+id/et_last_name"
            style="@style/viewCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_person_black_24dp"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-light"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="292dp" />

        <EditText
            android:id="@+id/et_email"
            style="@style/viewCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_email_black_24dp"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-light"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="354dp" />

        <EditText
            android:id="@+id/et_password"
            style="@style/viewCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_vpn_key_black_24dp"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-light"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="411dp" />

        <Button
            android:id="@+id/btnCriarMesa"
            style="@style/CKButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_buttons"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/create_act"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="469dp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/note_list_progress2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>